--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,23 @@ node_modules/
 dist/
 build/
 
+# Environment variables and API keys
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+
 # Logs
 *.log
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log* 
+yarn-error.log*
+
+# Python virtual environment
+venv/
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python 
