--- a/manifest.json
+++ b/manifest.json
@@ -4,11 +4,16 @@
   "version": "1.0.0",
   "description": "Automatically skips sponsorship segments in YouTube videos",
   "permissions": ["scripting", "activeTab", "storage"],
-  "host_permissions": ["https://www.youtube.com/*"],
+  "host_permissions": [
+    "https://www.youtube.com/*", 
+    "http://localhost:8080/*",
+    "http://127.0.0.1:8080/*"
+  ],
   "content_scripts": [
     {
       "matches": ["https://www.youtube.com/*"],
-      "js": ["content.js"]
+      "js": ["content.js"],
+      "run_at": "document_end"
     }
   ],
   "action": {
@@ -23,5 +28,11 @@
     "16": "images/icon16.png",
     "48": "images/icon48.png",
     "128": "images/icon128.png"
+  },
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'; connect-src 'self' http://localhost:8080 http://127.0.0.1:8080"
+  },
+  "background": {
+    "service_worker": "background.js"
   }
 } 
